# Classical_Laminate_Theory

./: GEMINI.md  README.md  demo_copv.py  demonstration.ipynb  demonstration_2.py  for_later.py  main.py  pressure_vessel_development.ipynb  pyproject.toml  requirements.txt  structures.py
classical_laminate_theory/: __init__.py  claude_identify_best_angle.py  failuremodels.py  helpers.py  isotensoid_generator.py  isotensoid_profile.dxf  progressive_failure_analysis.py  structures.py  vessel_analyzer.py  vessel_compliant.dxf  vessel_optimizer.py  visualization.py
docs/: make.bat
docs/source/: conf.py  index.rst  modules.rst
isotensoid/: isotensoid_gen_old.py  isotensoid_generator.py  isotensoid_profile.dxf  vessel_dome.dxf  vessel_polyline.dxf  vessel_spline.dxf
test/: test_failure_models.py  test_helpers.py  test_pfa.py  test_structures.py
