[project]
name = "classical-laminate-theory"
version = "0.1.0"
description = "A comprehensive toolkit for Classical Laminate Theory and Progressive Failure Analysis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cmcrameri>=1.9",
    "ezdxf>=1.4.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "renku-sphinx-theme>=0.5.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sphinx>=9.1.0",
]

[project.scripts]
clt-viz = "classical_laminate_theory.visualization:main"
clt-pfa = "classical_laminate_theory.progressive_failure_analysis:main"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "renku-sphinx-theme>=0.5.2",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["classical_laminate_theory"]
